kodex-rs/tui/src/snapshots/kodex_tui__startup_draft__tests__startup_draft_onboarding_transition.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 802
expression: frames
---
before onboarding: hidden (0x0 viewport)
---
after onboarding:

  >_ OpenAI Kodex (v<VERSION>)
     loading

  Pull up a prompt.


› Ask Kodex to do anything

  ? for shortcuts
