kodex-rs/tui/src/snapshots/kodex_tui__startup_draft__tests__terminal_app_ssh_startup.snap
---
source: tui/src/startup_draft_tests.rs
assertion_line: 194
expression: "frames.join(\"\\n---\\n\").replace(crate::version::KODEX_CLI_VERSION, \"<VERSION>\")"
---
terminal_app_over_ssh=false, owned=true

  >_ OpenAI Kodex (v<VERSION>)
     loading

  Pull up a prompt.








› Ask Kodex to do anything

  ? for shortcuts
---
terminal_app_over_ssh=true, owned=false

  >_ OpenAI Kodex (v<VERSION>)
     loading

  Pull up a prompt.


› Ask Kodex to do anything

  ? for shortcuts
